--- a/ui/src/main/content/jcr_root/apps/intelmobile/i18n/en_UK.xml
+++ b/ui/src/main/content/jcr_root/apps/intelmobile/i18n/en_UK.xml
@@ -146,10 +146,46 @@
         jcr:primaryType="sling:MessageEntry"
         sling:key="productdetailsCMS.label.expand_shop_options"
         sling:message="From"/>
+    <productdetails.label.feature_boardfamily
+        jcr:mixinTypes="[sling:Message]"
+        jcr:primaryType="nt:folder"
+        sling:message=""/>
+    <productdetails.label.feature_boardformfactor
+        jcr:mixinTypes="[sling:Message]"
+        jcr:primaryType="nt:folder"
+        sling:message=""/>
+    <productdetails.label.feature_boardseries
+        jcr:mixinTypes="[sling:Message]"
+        jcr:primaryType="nt:folder"
+        sling:message=""/>
+    <productdetails.label.feature_capacity
+        jcr:mixinTypes="[sling:Message]"
+        jcr:primaryType="nt:folder"
+        sling:message=""/>
+    <productdetails.label.feature_chipset
+        jcr:mixinTypes="[sling:Message]"
+        jcr:primaryType="nt:folder"
+        sling:message=""/>
+    <productdetails.label.feature_formfactor
+        jcr:mixinTypes="[sling:Message]"
+        jcr:primaryType="nt:folder"
+        sling:message=""/>
     <productdetails.label.feature_harddrive
         jcr:mixinTypes="[sling:Message]"
         jcr:primaryType="nt:folder"
-        sling:message="Hard Drive"/>
+        sling:message=""/>
+    <productdetails.label.feature_integratedgraphics
+        jcr:mixinTypes="[sling:Message]"
+        jcr:primaryType="nt:folder"
+        sling:message=""/>
+    <productdetails.label.feature_interface
+        jcr:mixinTypes="[sling:Message]"
+        jcr:primaryType="nt:folder"
+        sling:message=""/>
+    <productdetails.label.feature_memory
+        jcr:mixinTypes="[sling:Message]"
+        jcr:primaryType="nt:folder"
+        sling:message=""/>
     <productdetails.label.feature_os
         jcr:mixinTypes="[sling:Message]"
         jcr:primaryType="nt:folder"
@@ -162,10 +198,22 @@
         jcr:mixinTypes="[sling:Message]"
         jcr:primaryType="nt:folder"
         sling:message="RAM"/>
+    <productdetails.label.feature_ranreadwrite
+        jcr:mixinTypes="[sling:Message]"
+        jcr:primaryType="nt:folder"
+        sling:message=""/>
     <productdetails.label.feature_screen
         jcr:mixinTypes="[sling:Message]"
         jcr:primaryType="nt:folder"
         sling:message="Screen Size"/>
+    <productdetails.label.feature_seqreadwrite
+        jcr:mixinTypes="[sling:Message]"
+        jcr:primaryType="nt:folder"
+        sling:message=""/>
+    <productdetails.label.feature_socket
+        jcr:mixinTypes="[sling:Message]"
+        jcr:primaryType="nt:folder"
+        sling:message=""/>
     <productdetails.label.feature_speed
         jcr:mixinTypes="[sling:Message]"
         jcr:primaryType="nt:folder"
@@ -273,7 +321,7 @@
         jcr:mixinTypes="[cq:ReplicationStatus]"
         jcr:primaryType="sling:MessageEntry"
         sling:key="productlisting.label.pagination2"
-        sling:message="Load &lt;Count> More Products"/>
+        sling:message="Load 12 More Products"/>
     <productlisting.label.pagination20
         jcr:mixinTypes="[sling:Message]"
         jcr:primaryType="nt:folder"
@@ -290,7 +338,7 @@
         jcr:mixinTypes="[cq:ReplicationStatus]"
         jcr:primaryType="sling:MessageEntry"
         sling:key="productlisting.message.nullresult"
-        sling:message="No Results match.."/>
+        sling:message=""/>
     <searchresultspage.label.resultsfound
         jcr:mixinTypes="[sling:Message]"
         jcr:primaryType="nt:folder"
