--- a/ui/src/main/content/jcr_root/etc/languages/.content.xml
+++ b/ui/src/main/content/jcr_root/etc/languages/.content.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jcr:root xmlns:sling="http://sling.apache.org/jcr/sling/1.0" xmlns:jcr="http://www.jcp.org/jcr/1.0"
     jcr:primaryType="sling:Folder"
-    languages="[en_US,de_DE,en_au,en_ie,en_GB,ru_RU]"/>
+    languages="[en_US,de_DE,en_AU,en_IN,en_GB,ru_RU,pt_BR,en_MY,en_PH]"/>
